Bug 516435 - Text Caret Tracking is Fixed To Proportional Tracking and Ignores Preferred Tracking Mode
Summary: Text Caret Tracking is Fixed To Proportional Tracking and Ignores Preferred T...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.6.0
Platform: CachyOS Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-21 03:25 UTC by Grayson Peddie
Modified: 2026-02-28 00:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.2
Sentry Crash Report:


Attachments
This is an HTML file that contains textareas that spread across the entire web page. (828 bytes, text/html)
2026-02-21 03:25 UTC, Grayson Peddie
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Grayson Peddie 2026-02-21 03:25:17 UTC
Created attachment 189902 [details]
This is an HTML file that contains textareas that spread across the entire web page.

SUMMARY
Depending on which tracking mode the user is using, the caret tracking feature is fixed to the proportional tracking mode and proportional tracking mode is always used while typing and that the magnifier is focused on the insertion point. For convenience, I have attached an HTML file for use with the Falkon web browser.

STEPS TO REPRODUCE
1. Open the attached HTML file in Falkon (Ctrl+O and select the downloaded HTML file).
2. While using different tracking mode such as strict tracking, use the TAB and Shift+TAB key to navigate between different textareas and start typing in different textareas.
3. Observe that the screen moves proportionally to the text cursor as if the proportional mouse tracking feature is used.
4. Repeat with different tracking modes. Set it to disabled and repeat steps 2 and 3.

OBSERVED RESULT
The text caret tracking has a hard link to the proportional tracking mode. It does not matter if tracking is disabled or set to Center (Strict) mode.

EXPECTED RESULT
The text caret tracking feature should follow which tracking mode is used.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.6.0

ADDITIONAL INFORMATION
If you'd like, I could make a video demonstrating the different tracking modes and how this affects users who type while using a fullscreen magnifier.
Comment 1 Ganton 2026-02-21 11:19:12 UTC
This is important to people with visual disabilities that have to use magnifiers, for example.
Comment 2 Grayson Peddie 2026-02-21 18:28:22 UTC
Oh, should I go ahead and rename to include the "zoom-effect" at the beginning of the title? I forgot about that.
Comment 3 Vlad Zahorodnii 2026-02-24 22:19:55 UTC
Git commit d82b3107d8bfd884147b9ab35e734d46510af66d by Vlad Zahorodnii, on behalf of Ritchie Frodomar.
Committed on 24/02/2026 at 21:00.
Pushed by vladz into branch 'master'.

plugins/zoom: Respect mouse tracking setting when using caret tracking

Caret and focus tracking now go through the usual mouse tracking path,
meaning the mouse tracking mode affects how the zoom area follows
text carets.

If mouse tracking is disabled, it will still warp the zoom area
to follow focus/caret tracking.
Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

M  +26   -23   src/plugins/zoom/zoom.cpp

https://invent.kde.org/plasma/kwin/-/commit/d82b3107d8bfd884147b9ab35e734d46510af66d
Comment 4 Nate Graham 2026-02-28 00:31:34 UTC
Git commit 9600495fffedfcdde24c6db074e15c9acaa10f04 by Nate Graham.
Committed on 27/02/2026 at 23:55.
Pushed by ngraham into branch 'Plasma/6.6'.

plugins/zoom: Respect mouse tracking setting when using caret tracking

Caret and focus tracking now go through the usual mouse tracking path,
meaning the mouse tracking mode affects how the zoom area follows
text carets.

If mouse tracking is disabled, it will still warp the zoom area
to follow focus/caret tracking.
Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>


(cherry picked from commit d82b3107d8bfd884147b9ab35e734d46510af66d)

Co-authored-by: Ritchie Frodomar <alkalinethunder@gmail.com>

M  +26   -23   src/plugins/zoom/zoom.cpp

https://invent.kde.org/plasma/kwin/-/commit/9600495fffedfcdde24c6db074e15c9acaa10f04