plugins/zoom: Respect mouse tracking setting when using caret tracking

Caret and focus tracking now go through the usual mouse tracking path,
meaning the mouse tracking mode affects how the zoom area follows
text carets.

If mouse tracking is disabled, it will still warp the zoom area
to follow focus/caret tracking.

BUG: 516435
Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>


(cherry picked from commit d82b3107d8bfd884147b9ab35e734d46510af66d)

Co-authored-by: Ritchie Frodomar <alkalinethunder@gmail.com>